--- a/Web-разработка/first/second/index.html
+++ b/Web-разработка/first/second/index.html
@@ -88,7 +88,7 @@
                 <a href="../../2up.html"target="_blank">Относительная ссылка на страницу в каталоге с двумя уровнями выше текущего</a>
             </li>
             <li>
-                <a href="main.html"target="_blank">Сокращённая ссылка на главную</a>
+                <a href="index.html"target="_blank">Сокращённая ссылка на главную</a>
             </li>
             <li>
                 <a href="about/inner.html"target="_blank">Сокращённая ссылка на внутреннюю</a>
