--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>
             Web-development
         </title>
-        <link rel="stylesheet" href="https://github.com/NikitaGordievskiy/NikitaGordievskiy.github.io/blob/main/css/styles.css">
+        <link rel="stylesheet" href="https://nikitagordievskiy.github.io/styles.css">
     </head>
     <body>
         <article id="Beg"></article>
