--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>
             Web-development
         </title>
-        <link rel="stylesheet" href="https://nikitagordievskiy.github.io/styles.css" type="text/css">
+        <link rel="stylesheet" href="css/styles.css" type="text/css">
     </head>
     <body>
         <article id="Beg"></article>
