--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>
             Web-development
         </title>
-        <link rel="stylesheet" href="style.css" type="text/css">
+        <link rel="stylesheet" href="./style.css">
     </head>
     <body>
         <article id="Beg"></article>
@@ -90,6 +90,71 @@
                 <a href="about/inner.html" target="_blank">Сокращённая ссылка на внутреннюю</a>
             </li>
         </ol>
+        </div>
+        <div class="table">
+            <h2>
+                Таблица
+            </h2>
+            <table>
+                <tr>
+                    <td colspan="3">Сравнение трофеев Реала и Барселоны</td>
+                </tr>
+                <tr>
+                    <th>
+                        Турнир
+                    </th>
+                    <th>
+                        Реал
+                    </th>
+                    <th>
+                        Барселона
+                    </th>
+                </tr>
+                <tr>
+                    <th>
+                        Чемпионат Испании 
+                    </th>
+                    <th>
+                        35
+                    </th>
+                    <th>
+                        26
+                    </th>
+                </tr>
+                <tr>
+                    <th>
+                        Кубок Короля
+                    </th>
+                    <th>
+                        19
+                    </th>
+                    <th>
+                        31
+                    </th>
+                </tr>
+                <tr>
+                    <th>
+                        Лига чемпионов
+                    </th>
+                    <th>
+                        14
+                    </th>
+                    <th>
+                        5
+                    </th>
+                </tr>
+                <tr>
+                    <th>
+                        Суперкубок Испании
+                    </th>
+                    <th>
+                        12
+                    </th>
+                    <th>
+                        13
+                    </th>
+                </tr>
+            </table>
         </div>
         <article id="Form"></article>
         <div class="form">
