--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <a href="ftp://user:password@adress/file.txt" target="_blank">Ссылка на файл на сервере FTP с авторизацией</a>
             </li>
             <li>
-                <a href="https://kubsu.ru/ru/university#main-content" target="_blank">Ссылка на фрагмент страницы некоторого сайта</a
+                <a href="https://kubsu.ru/ru/university#main-content" target="_blank">Ссылка на фрагмент страницы некоторого сайта</a>
             </li>
             <li>
                 <a href="#Form">Ссылка на фрагмент (в данном случае на раздел с формой) текущего сайта</a>
@@ -49,7 +49,7 @@
                 <a href="" target="_blank">Ссылка с пустым href</a>
             </li>
             <li>
-                <a href="https://example.com/" rel="nofollow"target="_blank"> Ссылка, запрещенная для индексации поисковиками</a>
+                <a href="https://example.com/" rel="nofollow" target="_blank"> Ссылка, запрещенная для индексации поисковиками</a>
             </li>
             <!--noindex-->
                 <li>
@@ -61,7 +61,7 @@
             </li>
             <li>
                 <article id="image"></article>
-                <a href="https://lokobasket.com"target="_blank" id="Image"><img src="logo_loko.png" alt="Логотип Локо" ></a>
+                <a href="https://lokobasket.com" target="_blank" id="Image"><img src="logo_loko.png" alt="Логотип Локо" ></a>
             </li>
             <li>
                 <map name="figure">
@@ -157,7 +157,7 @@
         </div>
         <article id="Form"></article>
         <div class="form">
-        <form action="/"method="POST">
+        <form action="/" method="POST">
             <h2>Форма HTML</h2>
             <label>
                 Введите имя пользователя:<br />
@@ -175,7 +175,7 @@
                 Введите дату рождения:<br />
                 <input name="field-date"
                  value="2000-01-01"
-                 type="date"
+                 type="date">
             </label><br />
             Укажите пол:<br />
             <label>
