--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="./style.css">
     </head>
     <body>
-        <article id="Beg"></article>
+        <a id="Beg"></a>
         <header class="header">
             <div class="title">Первое задание по Web-development
                 <img src="my_logo.png" class="logo" alt="Логотип моего проекта">
@@ -60,7 +60,7 @@
                 <p>Благодаря <a href="https://www.championat.com" target="_blank">Чемпионату</a> можно узнавать результаты спортивных событий </p>
             </li>
             <li>
-                <article id="image"></article>
+                <a id="image"></a>
                 <a href="https://lokobasket.com" target="_blank" id="Image"><img src="logo_loko.png" alt="Логотип Локо" ></a>
             </li>
             <li>
@@ -155,7 +155,7 @@
                 </tr>
             </table>
         </div>
-        <article id="Form"></article>
+        <a id="Form"></a>
         <div class="form">
         <form action="/" method="POST">
             <h2>Форма HTML</h2>
@@ -197,7 +197,7 @@
             </label>
             <label>
                 <input type="radio" name="radio-group-2" value="count5"/> 5+
-            </label><br / >
+            </label><br />
             <label>
                 Выберите желаемую сверхспособность: <br />
                 <select name="field-sup" multiple="multiple">
@@ -209,7 +209,7 @@
             <label>
                 Напишите свою историю: <br />
                 <textarea name="field-bio" placeholder="Мы должны узнать больше про нашего героя"></textarea>
-            </label> <br / >
+            </label> <br />
             <label>
                 Чекбокс: <br />
                 <input type="checkbox" name="chtck"> С контрактом ознакомлен(а)
