--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
             </li>
             <li>
                 <map name="figure">
-                    <area shape="rect" coords="10, 20, 100, 280" href="https://www.fcbarcelona.com/en/" alt="прямоугольник">
-                    <area shape="circle" coords="150, 130, 100" href="https://www.realmadrid.com/en" alt="круг">
+                    <area shape="rect" coords="10,20,100,280" href="https://www.fcbarcelona.com/en/" alt="прямоугольник">
+                    <area shape="circle" coords="150,130,100" href="https://www.realmadrid.com/en" alt="круг">
                 </map>
                 <img src="Безымянный.png" usemap=#figure alt="фигуры" style="width:200px;">
             </li>
