--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
             </label> <br />
             <label>
                 Текстовое поле email:<br />
-                <input name="field-email"
+                <input text="field-email"
                   type="email"
                   placeholder="Введите вашу электронную почту" />
             </label><br />
