--- a/index.html
+++ b/index.html
@@ -162,12 +162,12 @@
             <label>
                 Введите имя пользователя:<br />
                 <input name="field-name-1"
-                type="name"
+                type="text"
                 placeholder="Имя пользователя:">
             </label> <br />
             <label>
                 Текстовое поле email:<br />
-                <input text="field-email"
+                <input name="field-email"
                   type="email"
                   placeholder="Введите вашу электронную почту" />
             </label><br />
@@ -201,7 +201,7 @@
             <label>
                 Выберите желаемую сверхспособность: <br />
                 <select name="field-sup" multiple="multiple">
-                    <option value="num1" selected="selecred"> Бессмертие</option>
+                    <option value="num1" selected="seletred"> Бессмертие</option>
                     <option value="num2" > Режим призрака</option>
                     <option value="num3" > Левитация</option>
                 </select>
