--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
             <label>
                 Выберите желаемую сверхспособность: <br />
                 <select name="field-sup" multiple="multiple">
-                    <option value="num1" selected="seletred"> Бессмертие</option>
+                    <option value="num1" selected="selected"> Бессмертие</option>
                     <option value="num2" > Режим призрака</option>
                     <option value="num3" > Левитация</option>
                 </select>
