--- a/Web-разработка/first/second/index.html
+++ b/Web-разработка/first/second/index.html
@@ -68,7 +68,7 @@
                     <area shape="rect" coords="10,20,100,280" href="https://www.fcbarcelona.com/en/" alt="прямоугольник">
                     <area shape="circle" coords="150,130,100" href="https://www.realmadrid.com/en" alt="круг">
                 </map>
-                <img src="Безымянный.png" usemap=#figure alt="фигуры" style="width:200px;">
+                <img src="BarcaReal.png" usemap=#figure alt="фигуры" style="width:200px;">
             </li>
             <li>
                 <a href="cur.html" target="_blank">Относительная ссылка на страницу в текущем каталоге</a>
