--- a/Web-разработка/first/second/index.html
+++ b/Web-разработка/first/second/index.html
@@ -4,7 +4,7 @@
         <title>
             Web-development
         </title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="./style.css">
     </head>
     <body>
         <a id="Beg"></a>
