--- a/Web-разработка/first/second/index.html
+++ b/Web-разработка/first/second/index.html
@@ -11,18 +11,17 @@
     <body>
         <a id="Beg"></a>
         <header class="header">
-            <div class="title">Первое задание по Web-development
+            <div class="title">
                 <img src="my_logo.png" class="logo" alt="Логотип моего проекта">
+                <h1>Первое задание по Web-development</h1>
             </div>
         </header>
         <div class="flex-container">
         <nav class="navigation">
             <p>Список ссылок основной навигации сайта</p>
-            <div class="ssnav">
-                <div class="flex-item"><a href="#Beg" title="Перейти в начало текущего сайта">В начало текущего сайта</a></div>
-                <div class="flex-item"><a href="#image" title="Перейти к изображению">К изображению</a></div>
-                <div class="flex-item"><a href="#Form" title="Перейти к разделу 'Формы'">К разделу 'Формы'</a></div>
-            </div>
+                <a href="#Beg" title="Перейти в начало текущего сайта">В начало текущего сайта</a>
+                <a href="#image" title="Перейти к изображению">К изображению</a>
+                <a href="#Form" title="Перейти к разделу 'Формы'">К разделу 'Формы'</a>
         </nav>
         <div class="kontent">
         <ol>
