--- a/Web-разработка/first/second/index.html
+++ b/Web-разработка/first/second/index.html
@@ -103,7 +103,7 @@
             <h2>
                 Таблица
             </h2>
-            <table class="table mw-100">
+            <table class="table">
                 <tr>
                     <td colspan="3">Сравнение трофеев Реала и Барселоны</td>
                 </tr>
