--- a/Web-разработка/first/second/index.html
+++ b/Web-разработка/first/second/index.html
@@ -27,45 +27,34 @@
             </div>
             </div>
         </nav>
-        <div class="background"></div>
-<div class="outer-div">
-  <div class="inner-div">
-    <div class="front">
-      <div class="front__bkg-photo"></div>
-      <div class="front__face-photo"></div>
-      <div class="front__text">
-        <h3 class="front__text-header">Список ссылок</h3>
-        <span class="front__text-hover">Наведи, чтобы посмотреть</span>
-      </div>
-    </div>
         <div class="kontent d-flex flex-column mx-auto my-2 text-center">
         <ol>
             <li>
-                <a href="http://example.com/" class="social-icon" target="_blank">Aбсолютнaя гиперссылка на главную страницу сайта example.com</a>
+                <a href="http://example.com/" target="_blank">Aбсолютнaя гиперссылка на главную страницу сайта example.com</a>
             </li>
             <li>
-                <a href="https://example.com/" class="social-icon" target="_blank">Абсолютная гиперссылка на главную страницу сайта example.com в протоколе https</a>
+                <a href="https://example.com/" target="_blank">Абсолютная гиперссылка на главную страницу сайта example.com в протоколе https</a>
             </li>
             <li>
-                <a href="ftp://ftp.ubisoft.com/" class="social-icon" target="_blank">Ссылка на файл на сервере FTP без авторизации</a>
+                <a href="ftp://ftp.ubisoft.com/" target="_blank">Ссылка на файл на сервере FTP без авторизации</a>
             </li>
             <li>
-                <a href="ftp://user:password@adress/file.txt" class="social-icon" target="_blank">Ссылка на файл на сервере FTP с авторизацией</a>
+                <a href="ftp://user:password@adress/file.txt" target="_blank">Ссылка на файл на сервере FTP с авторизацией</a>
             </li>
             <li>
-                <a href="https://kubsu.ru/ru/university#main-content" class="social-icon" target="_blank">Ссылка на фрагмент страницы некоторого сайта</a>
+                <a href="https://kubsu.ru/ru/university#main-content" target="_blank">Ссылка на фрагмент страницы некоторого сайта</a>
             </li>
             <li>
-                <a href="#Form" class="social-icon">Ссылка на фрагмент (в данном случае на раздел с формой) текущего сайта</a>
+                <a href="#Form">Ссылка на фрагмент (в данном случае на раздел с формой) текущего сайта</a>
             </li>
             <li>
-                <a href="https://yandex.ru/search/?text=lokobasket&lr=35" class="social-icon" target="_blank">Ссылка с двумя параметрами в URL</a>
+                <a href="https://yandex.ru/search/?text=lokobasket&lr=35" target="_blank">Ссылка с двумя параметрами в URL</a>
             </li>
             <li>
                 <a>Ссылка без href</a>
             </li>
             <li>
-                <a href="" class="social-icon" target="_blank">Ссылка с пустым href</a>
+                <a href="" target="_blank">Ссылка с пустым href</a>
             </li>
             <li>
                 <a href="https://example.com/" rel="nofollow" target="_blank"> Ссылка, запрещенная для индексации поисковиками</a>
@@ -109,8 +98,6 @@
             </li>
         </ol>
         </div>
-    </div>
-</div>
         <div class="d-flex flex-column-reverse flex-sm-column">
         <div class="table my-2 text-center">
             <h2>
