--- a/Web-разработка/first/second/index.html
+++ b/Web-разработка/first/second/index.html
@@ -69,8 +69,12 @@
             </li>
             <li>
                 <a id="image"></a>
-                <a href="https://lokobasket.com" target="_blank" id="Image"><img src="logo_loko.png" alt="Логотип Локо" ></a>
-            </li>
+                <div class="card-wrapper">
+                    <div class="card">
+                        <a href="https://lokobasket.com" target="_blank" id="Image"><img src="logo_loko.png" alt="Логотип Локо" ></a>
+                        <div class="card-shine"></div>
+                    </div>
+                  </div>            </li>
             <li>
                 <map name="figure">
                     <area shape="rect" coords="10,20,100,280" href="https://www.fcbarcelona.com/en/" alt="прямоугольник">
