--- a/Web-разработка/first/second/index.html
+++ b/Web-разработка/first/second/index.html
@@ -15,7 +15,7 @@
         <div class="container m-auto">
             <header class="p-1 text-center">
                 <img src="my_logo.png" class="logo float-left" alt="Логотип моего проекта">
-                <h1 class="mt-0 pt-3 pt-lg-5">Четвёртое задание по Web-development</h1>
+                <h1 class="mt-0 pt-3 pt-lg-5">Пятое задание по Web-development</h1>
             </header>
         </div>
         <div class="container">
