--- a/Web-разработка/first/second/index.html
+++ b/Web-разработка/first/second/index.html
@@ -28,7 +28,7 @@
                         <input type="checkbox" id="delivery"> Необходима доставка
                     </label><br />
                     <button type="button" id="button">Рассчитать результат</button><br />
-                    <div class="row col-12 mb-3"><span id="out">0.0</span> <span class="rub">₽</span></div>
+                    <div class="row col-12 mb-3"><span id="out"></span></div>
                 </form>
             </div>
         <nav class="d-flex flex-row">
